Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -492,6 +492,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
