--- a/index.ipynb
+++ b/index.ipynb
@@ -497,7 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict(name='Michael)"
+    "dict(name='Michael', age=32, job='')"
    ]
   },
   {
