Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -497,7 +497,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict(name='Michael', age=32, job='')"
+    "dict(name='Michael', age=32, job='too much', career='not ')"
    ]
   },
   {
