Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -508,7 +508,7 @@
     }
    ],
    "source": [
-    "dict(name='Michael', age=32, job='too much', career='not enough')"
+    "boy = dict(name='Michael', age=32, job='too much', career='not enough')"
    ]
   },
   {
