Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -493,20 +493,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'Michael', 'age': 32, 'job': 'too much', 'career': 'not enough'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "boy = dict(name='Michael', age=32, job='too much', career='not enough')"
    ]
@@ -527,7 +516,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "boy[age]"
+   ]
   },
   {
    "cell_type": "code",
